Reenable vertical centering

--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -2,5 +2,5 @@
 slide-number : true
 transition : none
 background-size : auto
-vertical-center : false
+# vertical-center : false
 theme-override : assets/PITCHME.css
