--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,6 +1,6 @@
 # GitPitch Settings
 slide-number : true
 transition : none
-background-size : contain
+background-size : auto
 # vertical-center : false
 theme-override : assets/PITCHME.css
